Change bottom margin of main element for desktop media query to prevent an element shift glitch

--- a/public/styles/media-queries.css
+++ b/public/styles/media-queries.css
@@ -23,7 +23,7 @@
   }
 
   main {
-    margin: 6em 2em 2em 2em;
+    margin: 6em 2em 4em 2em;
   }
 
   button.scroll-up {
